<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name"
        style="@style/Regular.Subheading"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view_display_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Regular.Subheading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_first_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        style="@style/Regular.Subheading"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_first_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view_display_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_last_name"
        style="@style/Regular.Subheading"
        app:layout_constraintTop_toBottomOf="@id/text_view_first_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        style="@style/Regular.Subheading"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_last_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_view_display_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Regular.Subheading"
        app:layout_constraintStart_toEndOf="@id/text_view_age"
        app:layout_constraintTop_toBottomOf="@id/text_view_last_name"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>